update photos page

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         </div>
 
         <div class="headshot">
-          <img src="headshot.svg">
+          <img src="svg/headshot.svg">
         </div>
       </div>
 
@@ -49,7 +49,7 @@
       <div class="aboutMe">
 
         <div class="aboutMePic">
-          <img src="aboutMe.svg">
+          <img src="svg/aboutMe.svg">
 
         </div>
 
@@ -122,7 +122,7 @@
 
     <div class="additionalContainer">
       <div class="additionalCard" onclick="window.location.href='projects.html'">
-        <img src="brackets.svg">
+        <img src="svg/brackets.svg">
         <div class="projectTitle">
           Projects
         </div>
@@ -134,7 +134,7 @@
       </div>
 
       <div class="additionalCard" onclick="window.location.href='photos.html'">
-        <img src="camera.svg">
+        <img src="svg/camera.svg">
         <div class="projectTitle">
           Photography
         </div>
