--- a/photos.html
+++ b/photos.html
@@ -19,31 +19,22 @@
 
 <body>
 
-    <img src="home.svg" class="home" onclick="window.location.href='index.html'">
+    <img src="svg/home.svg" class="home" onclick="window.location.href='index.html'">
 
     <div id="image-track" data-mouse-down-at="0" data-prev-percentage="0">
-        <img class="image" src="photos/road.jpg" draggable="false" />
-        <img class="image" src="photos/greece.jpg" draggable="false" />
-        <img class="image" src="photos/winston.jpg" draggable="false" />
-        <img class="image" src="photos/alps.jpg" draggable="false" />
-        <img class="image" src="photos/parrot.jpg" draggable="false" />
-        <img class="image" src="photos/lawquad.jpg" draggable="false" />
-        <img class="image" src="photos/monkey.jpg" draggable="false" />
-        <img class="image" src="photos/wonderland.jpg" draggable="false" />
-        <img class="image" src="photos/alps2.jpg" draggable="false" />
-        <img class="image" src="photos/halfDome.jpg" draggable="false" />
-        <img class="image" src="photos/hawaii.jpg" draggable="false" />
-        <img class="image" src="photos/moraga.jpg" draggable="false" />
-        <img class="image" src="photos/palmTrees.JPG" draggable="false" />
-        <img class="image" src="photos/rivieraMaya.jpeg" draggable="false" />
-        <img class="image" src="photos/snowUmich.jpg" draggable="false" />
-        <img class="image" src="photos/stars.jpg" draggable="false" />
         <img class="image" src="photos/sfo2.jpg" draggable="false" />
-        <img class="image" src="photos/greece2.jpg" draggable="false" />
-        <img class="image" src="photos/sunsetcity.JPG" draggable="false" />
-        <img class="image" src="photos/clouds.jpg" draggable="false" />
         <img class="image" src="photos/nyc.jpg" draggable="false" />
-        <img class="image" src="photos/sfo4.jpg" draggable="false" />
+        <img class="image" src="photos/alps.jpg" draggable="false" />
+        <img class="image" src="photos/darkmonkey.jpg" draggable="false" />
+        <img class="image" src="photos/road.jpg" draggable="false" />
+        <img class="image" src="photos/parrot.jpg" draggable="false" />
+        <img class="image" src="photos/winston.jpg" draggable="false" />
+        <img class="image" src="photos/greece.jpg" draggable="false" />
+        <img class="image" src="photos/lawquad.jpg" draggable="false" />
+        <img class="image" src="photos/wonderland.jpg" draggable="false" />
+
+
+
     </div>
 
     <div id="segment-indicator">
@@ -57,20 +48,9 @@
         <div id="segment8"></div>
         <div id="segment9"></div>
         <div id="segment10"></div>
-        <div id="segment11"></div>
-        <div id="segment12"></div>
-        <div id="segment13"></div>
-        <div id="segment14"></div>
-        <div id="segment15"></div>
-        <div id="segment16"></div>
-        <div id="segment17"></div>
-        <div id="segment18"></div>
-        <div id="segment19"></div>
-        <div id="segment20"></div>
-        <div id="segment21"></div>
-        <div id="segment22"></div>
     </div>
 </body>
 
 <!-- END BODY -->
+
 </html>
