--- a/projects.html
+++ b/projects.html
@@ -28,7 +28,7 @@
     </header>
     <div class="projectCardContainer">
         <div class="additionalCard">
-            <img src="astroIcon.svg">
+            <img src="svg/astroIcon.svg">
             <div class="projectTitle">
                 ASTRO POD
             </div>
@@ -38,12 +38,12 @@
                 @astro_p0d and enjoy a daily dose of space straight to your feed!
             </div>
             <button onclick="window.location.href='https://github.com/ssheth75/Astro-POD'" class="codeButton"><img
-                    src="code.svg"></button>
+                    src="svg/code.svg"></button>
             <button onclick="window.location.href='https://instagram.com/astro_p0d'" class="enterButton"><img
-                    src="enter.svg"></button>
+                    src="svg/enter.svg"></button>
         </div>
         <div class="additionalCard">
-            <img src="icon2048.svg">
+            <img src="svg/icon2048.svg">
             <div class="projectTitle">
                 2048X
             </div>
@@ -54,12 +54,12 @@
                 this card.
             </div>
             <button onclick="window.location.href='https://github.com/ssheth75/2048X'" class="codeButton"><img
-                    src="code.svg"></button>
+                    src="svg/code.svg"></button>
             <button onclick="window.location.href='https://ssheth75.github.io/2048X/'" class="enterButton"><img
-                    src="enter.svg"></button>
+                    src="svg/enter.svg"></button>
         </div>
         <div class="additionalCard">
-            <img src="basketball.svg">
+            <img src="svg/basketball.svg">
             <div class="projectTitle">
                 Hoops Near Me
             </div>
@@ -70,9 +70,9 @@
                 near them and connect with other players. Coming soon!
             </div>
             <button onclick="window.location.href='https://github.com/ssheth75/Hoops-Near-Me'" class="codeButton"><img
-                    src="code.svg"></button>
+                    src="svg/code.svg"></button>
             <button onclick="window.location.href='https://github.com/ssheth75/Hoops-Near-Me'" class="enterButton"><img
-                    src="enter.svg"></button>
+                    src="svg/enter.svg"></button>
         </div>
     </div>
     <div class="viewMoreButtonContainer">
