fix photo naming error

--- a/photos.html
+++ b/photos.html
@@ -25,10 +25,10 @@
         <img class="image" src="photos/sfo2.jpg" draggable="false" />
         <img class="image" src="photos/nyc.jpg" draggable="false" />
         <img class="image" src="photos/alps.jpg" draggable="false" />
-        <img class="image" src="photos/darkmonkey.jpg" draggable="false" />
+        <img class="image" src="photos/darkMonkey.jpg" draggable="false" />
         <img class="image" src="photos/road.jpg" draggable="false" />
         <img class="image" src="photos/parrot.jpg" draggable="false" />
-        <img class="image" src="photos/winston.jpg" draggable="false" />
+        <img class="image" src="photos/winston.JPG" draggable="false" />
         <img class="image" src="photos/greece.jpg" draggable="false" />
         <img class="image" src="photos/lawquad.jpg" draggable="false" />
         <img class="image" src="photos/wonderland.jpg" draggable="false" />
