implement photo load optimization

--- a/index.html
+++ b/index.html
@@ -9,6 +9,17 @@
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
+<link rel="preload" href="photos/sfo2.jpg" as="image">
+<link rel="preload" href="photos/nyc.jpg" as="image">
+<link rel="preload" href="photos/alps.jpg" as="image">
+<link rel="preload" href="photos/darkMonkey.jpg" as="image">
+<link rel="preload" href="photos/road.jpg" as="image">
+<link rel="preload" href="photos/parrot.jpg" as="image">
+<link rel="preload" href="photos/winston.JPG" as="image">
+<link rel="preload" href="photos/greece.jpg" as="image">
+<link rel="preload" href="photos/lawquad.jpg" as="image">
+<link rel="preload" href="photos/wonderland.jpg" as="image">
+
 
 </head>
 
