--- a/projects.html
+++ b/projects.html
@@ -50,8 +50,7 @@
             <br>
             <div class="projectText">
                 A refreshing remake of the super popular 2048 game with a fun twist! You can play right now by
-                clicking
-                this card.
+                clicking below!
             </div>
             <button onclick="window.location.href='https://github.com/ssheth75/2048X'" class="codeButton"><img
                     src="svg/code.svg"></button>
