redesign full ui and update photos

--- a/index.html
+++ b/index.html
@@ -43,24 +43,7 @@
       </header>
 
       <div class="landing">
-        <div class="intro">
-          <div class="hello"></div>
-          <div class="subHello">Student | Developer | Designer</div>
-          <script src="https://unpkg.com/typed.js@2.0.16/dist/typed.umd.js"></script>
-
-          <script>
-
-            var typed = new Typed(".hello", {
-              strings: ["Hi!", "I'm <span class='colored-word'>Shirvil</span>"],
-              typeSpeed: 100,
-            });
-
-          </script>
-        </div>
-
-        <div class="headshot">
-          <img src="svg/headshot.svg">
-        </div>
+        <img id="landingIMG" src="landing.svg">
       </div>
 
 
@@ -69,10 +52,9 @@
     <div id="aboutMeContainer">
       <div class="aboutMe">
 
-        <div class="aboutMePic">
-          <img src="svg/aboutMe.svg">
 
-        </div>
+        <img src="headshot.png">
+
 
         <div class="aboutMeText">
           <div class="aboutMeTitle">About Me</div>
