--- a/photos.html
+++ b/photos.html
@@ -23,9 +23,11 @@
 
     <div id="image-track" data-mouse-down-at="0" data-prev-percentage="0">
         <img class="image" src="photos/sfo2.jpg" draggable="false" />
-        <img class="image" src="photos/nyc.jpg" draggable="false" />
+        <img class="image" src="photos/chicago.jpg" draggable="false" />
+        <img class="image" src="photos/tomatoes.jpg" draggable="false" />
         <img class="image" src="photos/alps.jpg" draggable="false" />
         <img class="image" src="photos/darkMonkey.jpg" draggable="false" />
+        <img class="image" src="photos/yosemite.jpg" draggable="false" />
         <img class="image" src="photos/road.jpg" draggable="false" />
         <img class="image" src="photos/parrot.jpg" draggable="false" />
         <img class="image" src="photos/winston.JPG" draggable="false" />
@@ -48,6 +50,10 @@
         <div id="segment8"></div>
         <div id="segment9"></div>
         <div id="segment10"></div>
+        <div id="segment11"></div>
+        <div id="segment11"></div>
+
+
     </div>
 </body>
 
