update photos segment indicator position

--- a/photos.html
+++ b/photos.html
@@ -38,6 +38,11 @@
 
 
     </div>
+<!-- 
+    <div id="clickAndDrag">
+        <div id="clickAndDragText">Click and Drag </div>
+
+    </div> -->
 
     <div id="segment-indicator">
         <div id="segment1"></div>
@@ -52,8 +57,6 @@
         <div id="segment10"></div>
         <div id="segment11"></div>
         <div id="segment11"></div>
-
-
     </div>
 </body>
 
