update landing page ui and photo loading bug

--- a/index.html
+++ b/index.html
@@ -10,15 +10,19 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
   <link rel="preload" href="photos/sfo2.jpg" as="image">
-  <link rel="preload" href="photos/nyc.jpg" as="image">
+  <link rel="preload" href="photos/chicago.jpg" as="image">
+  <link rel="preload" href="photos/tomatoes.jpg" as="image">
   <link rel="preload" href="photos/alps.jpg" as="image">
   <link rel="preload" href="photos/darkMonkey.jpg" as="image">
+  <link rel="preload" href="photos/yosemite.jpg" as="image">
   <link rel="preload" href="photos/road.jpg" as="image">
   <link rel="preload" href="photos/parrot.jpg" as="image">
   <link rel="preload" href="photos/winston.JPG" as="image">
   <link rel="preload" href="photos/greece.jpg" as="image">
   <link rel="preload" href="photos/lawquad.jpg" as="image">
   <link rel="preload" href="photos/wonderland.jpg" as="image">
+  <link rel="preload" href="LANDING.png" as="image">
+
 
 
 </head>
@@ -43,7 +47,7 @@
       </header>
 
       <div class="landing">
-        <img id="landingIMG" src="landing.svg">
+        <img id="landingIMG" src="LANDING.png">
       </div>
 
 
@@ -53,7 +57,7 @@
       <div class="aboutMe">
 
 
-        <img src="headshot.png">
+        <img id="headshot" src="headshot.png">
 
 
         <div class="aboutMeText">
