fix draggability and highlightability of images

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
       </header>
 
       <div class="landing">
-        <img id="landingIMG" src="LANDING.png">
+        <img id="landingIMG" src="LANDING.png" draggable="false">
       </div>
 
 
@@ -57,7 +57,7 @@
       <div class="aboutMe">
 
 
-        <img id="headshot" src="headshot.png">
+        <img id="headshot" src="headshot.png" draggable="false">
 
 
         <div class="aboutMeText">
