fix linkedin link

--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
           </div>
 
           <div class="socials">
-            <button onclick="window.location.href='https:www.linkedin.com/in/shirvilsheth'"><i
+            <button onclick="window.location.href='https://www.linkedin.com/in/shirvilsheth'"><i
                 class="fa fa-brands fa-linkedin"></i></button>
             <button onclick="window.location.href='https://github.com/ssheth75/'"><i
                 class="fa fa-brands fa-github"></i></button>
