fixed dynamically changing cards

--- a/index.html
+++ b/index.html
@@ -155,30 +155,33 @@
         </div>
       </div>
 
-      <div class="additionalContainer">
-        <div class="projectAndPhotosCard" onclick="window.location.href='projects.html'">
-          <img src="svg/brackets.svg">
-          <div class="projectsAndPhotosTitle">
-            Projects
+      <div class="cardsContainer">
+        <div class="additionalContainer">
+          <div class="projectAndPhotosCard" onclick="window.location.href='projects.html'">
+            <img src="svg/brackets.svg">
+            <div class="projectsAndPhotosTitle">
+              Projects
+            </div>
+            <div class="projectsAndPhotosText">
+              Take a look at some of the things I've built in the past and what I'm currently working on!
+              From some basic games to more challenging web apps,
+              I try to build things that are both engaging and useful.
+            </div>
           </div>
-          <div class="projectsAndPhotosText">
-            Take a look at some of the things I've built in the past and what I'm currently working on!
-            From some basic games to more challenging web apps,
-            I try to build things that are both engaging and useful.
-          </div>
-        </div>
 
-        <div class="projectAndPhotosCard" onclick="window.location.href='photos.html'">
-          <img src="svg/camera.svg">
-          <div class="projectsAndPhotosTitle">
-            Photography
-          </div>
-          <div class="projectsAndPhotosText">
-            Welcome to my world of captured moments, where film is my main canvas.
-            Each photo tells a unique story, an invitation to witness the world as I see it.
+          <div class="projectAndPhotosCard" onclick="window.location.href='photos.html'">
+            <img src="svg/camera.svg">
+            <div class="projectsAndPhotosTitle">
+              Photography
+            </div>
+            <div class="projectsAndPhotosText">
+              Welcome to my world of captured moments, where film is my main canvas.
+              Each photo tells a unique story, an invitation to witness the world as I see it.
+            </div>
           </div>
         </div>
       </div>
+
 
       <div class="contactMeContainer">
         <div class="contacts">
