--- a/projects.html
+++ b/projects.html
@@ -7,6 +7,8 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="projects.css">
+
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
 </head>
@@ -32,16 +34,18 @@
             <div class="projectTitle">
                 BeTuned
             </div>
-            <br>
+
             <div class="projectText">
-                A unique spinoff of the social media app, BeReal. With 
-                spontaneous content sharing, users can share their most recently played 
-                    music with friends and followers. Coming soon!
+                A unique spinoff of the social media app, BeReal. With
+                spontaneous content sharing, users can share their most recently played
+                music with friends and followers. Coming soon!
             </div>
-            <button onclick="window.location.href='https://github.com/ssheth75/beTuned'" class="codeButton"><img
-                    src="svg/code.svg"></button>
-            <button onclick="window.location.href='https://github.com/ssheth75/beTuned'" class="enterButton"><img
-                    src="svg/enter.svg"></button>
+            <div class="buttonContainer">
+                <button onclick="window.location.href='https://github.com/ssheth75/beTuned'" class="codeButton"><img
+                        src="svg/code.svg"></button>
+                <button onclick="window.location.href='https://github.com/ssheth75/beTuned'" class="enterButton"><img
+                        src="svg/enter.svg"></button>
+            </div>
         </div>
         <div class="additionalCard">
             <svg xmlns="http://www.w3.org/2000/svg" height="30" width="30"
@@ -52,15 +56,18 @@
             <div class="projectTitle">
                 E-commerce
             </div>
-            <br>
+
             <div class="projectText">
                 A full-stack e-commerce site. Includes an admin dashboard, user authentication, and a user-end store.
                 Payments powered by Stripe. Uses Next.js, MongoDB, and React.js.
             </div>
-            <button onclick="window.location.href='https://github.com/ssheth75/e-commerce'" class="codeButton"><img
-                    src="svg/code.svg"></button>
-            <button onclick="window.location.href='https://github.com/ssheth75/e-commerce'" class="enterButton"><img
-                    src="svg/enter.svg"></button>
+            <div class="buttonContainer">
+
+                <button onclick="window.location.href='https://github.com/ssheth75/e-commerce'" class="codeButton"><img
+                        src="svg/code.svg"></button>
+                <button onclick="window.location.href='https://github.com/ssheth75/e-commerce'" class="enterButton"><img
+                        src="svg/enter.svg"></button>
+            </div>
         </div>
 
 
@@ -69,19 +76,19 @@
             <div class="projectTitle">
                 Hoops Near Me
             </div>
-            <br>
+
             <div class="projectText">
                 A larger scale web appliaction that allow users to find basketball
                 courts near them and connect with other players.
             </div>
-            <button onclick="window.location.href='https://github.com/ssheth75/Hoops-Near-Me'" class="codeButton"><img
-                    src="svg/code.svg"></button>
-            <button onclick="window.location.href='https://github.com/ssheth75/Hoops-Near-Me'" class="enterButton"><img
-                    src="svg/enter.svg"></button>
+            <div class="buttonContainer">
+                <button onclick="window.location.href='https://github.com/ssheth75/Hoops-Near-Me'"
+                    class="codeButton"><img src="svg/code.svg"></button>
+                <button onclick="window.location.href='https://github.com/ssheth75/Hoops-Near-Me'"
+                    class="enterButton"><img src="svg/enter.svg"></button>
+            </div>
         </div>
 
-    </div>
-    <div class="projectCardContainer">
         <div class="additionalCard">
             <svg xmlns="http://www.w3.org/2000/svg" height="30" width="30"
                 viewBox="0 0 496 512"><!--!Font Awesome Free 6.5.1 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.-->
@@ -91,53 +98,56 @@
             <div class="projectTitle">
                 Topify
             </div>
-            <br>
+
             <div class="projectText">
                 Similar to Spotify rewind, this web app will allow users to see their top tracks, artists, and more
                 anytime! Utilizes Spotify's API and React.js.
             </div>
-            <button onclick="window.location.href='https://github.com/ssheth75/topify'" class="codeButton"><img
-                    src="svg/code.svg"></button>
-            <button onclick="window.location.href='https://github.com/ssheth75/topify'" class="enterButton"><img
-                    src="svg/enter.svg"></button>
+            <div class="buttonContainer">
+                <button onclick="window.location.href='https://github.com/ssheth75/topify'" class="codeButton"><img
+                        src="svg/code.svg"></button>
+                <button onclick="window.location.href='https://github.com/ssheth75/topify'" class="enterButton"><img
+                        src="svg/enter.svg"></button>
+            </div>
         </div>
         <div class="additionalCard">
             <img src="svg/astroIcon.svg">
             <div class="projectTitle">
                 ASTRO POD
             </div>
-            <br>
+
             <div class="projectText">
                 An Instagram bot that posts a beautiful photo of the cosmos from NASA every day. Feel free to follow
                 @astro_p0d and enjoy a daily dose of space straight to your feed!
             </div>
-            <button onclick="window.location.href='https://github.com/ssheth75/Astro-POD'" class="codeButton"><img
-                    src="svg/code.svg"></button>
-            <button onclick="window.location.href='https://instagram.com/astro_p0d'" class="enterButton"><img
-                    src="svg/enter.svg"></button>
+            <div class="buttonContainer">
+
+                <button onclick="window.location.href='https://github.com/ssheth75/Astro-POD'" class="codeButton"><img
+                        src="svg/code.svg"></button>
+                <button onclick="window.location.href='https://instagram.com/astro_p0d'" class="enterButton"><img
+                        src="svg/enter.svg"></button>
+            </div>
         </div>
         <div class="additionalCard">
             <img src="svg/icon2048.svg">
             <div class="projectTitle">
                 2048X
             </div>
-            <br>
+
             <div class="projectText">
                 A refreshing remake of the super popular 2048 game with a fun twist! You can play right now by
                 clicking below!
             </div>
-            <button onclick="window.location.href='https://github.com/ssheth75/2048X'" class="codeButton"><img
-                    src="svg/code.svg"></button>
-            <button onclick="window.location.href='https://ssheth75.github.io/2048X/'" class="enterButton"><img
-                    src="svg/enter.svg"></button>
+            <div class="buttonContainer">
+
+                <button onclick="window.location.href='https://github.com/ssheth75/2048X'" class="codeButton"><img
+                        src="svg/code.svg"></button>
+                <button onclick="window.location.href='https://ssheth75.github.io/2048X/'" class="enterButton"><img
+                        src="svg/enter.svg"></button>
+            </div>
         </div>
 
-
     </div>
-    <!-- <div class="viewMoreButtonContainer">
-        <button onclick="window.location.href='https://github.com/ssheth75/'" class="viewMoreButton"><i
-                class="fa fa-solid fa-plus"></i></button>
-    </div> -->
 </body>
 
 <!-- END BODY -->
