--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
   <link rel="preload" href="LANDING.png" as="image">
 
 
+  <link rel="icon" href="favicon.ico" type="image/x-icon">
+  <link rel="icon" href="favicon.png" type="image/png">
 
 </head>
 
