--- a/index.html
+++ b/index.html
@@ -128,10 +128,10 @@
 
               <div id="skillsContent">
                 <div id="skill"><span class="colored-word">Languages</span> </div>
-                C++ | C | C# | Python | JavaScript | React | HTML | CSS | SQL
+                C++ | C | C# | Python | JavaScript | React | HTML | CSS | SQL | PowerShell
                 <div id="Hspacer"></div>
-                <div id="skill"><span class="colored-word">Tools</span> </div>
-                AWS | TensorFlow | Git | Visual Studio | PowerShell | Adobe Suite | Microsoft Office
+                <div id="skill"><span class="colored-word">Tools & Frameworks</span> </div>
+                AWS | Git | Visual Studio | VS Code | React Native | WinForms | Jupyter Notebooks | Adobe Suite | Microsoft Office
               </div>
 
               <div id="experienceContent">
