--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
         <div class="aboutMe">
 
 
-          <img id="headshot" src="headshotYellow.png" draggable="false">
+          <img id="headshot" src="Headshot1.png" draggable="false">
 
 
           <div class="aboutMeText">
